fix too large logo

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,13 @@ main {
 section {
   margin-bottom: 2rem;
 }
+
+#hero {
+  text-align: center;
+}
+
+#hero img {
+  max-width: 400px;
+  width: 100%;
+  height: auto;
+}
